<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_new_album"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layout_cover"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/button_back_create_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="?android:attr/homeAsUpIndicator"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/app"
                    />

                <TextView
                    android:id="@+id/description_new_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/new_album_description"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/layout_cover"
                    app:layout_constraintTop_toBottomOf="@+id/layout_cover" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/new_album_description_parte2"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/layout_cover"
                    app:layout_constraintTop_toBottomOf="@+id/description_new_album" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@+id/layout_cover"
                android:layout_marginTop="52dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="#FFFFFF"
                android:hint="Nombre"
                android:id="@+id/name"
                android:textColorHint="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/group_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@+id/name"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="#FFFFFF"
                android:hint="Carga Caratula"
                android:id="@+id/cover"
                android:textColorHint="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/group_cover_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@+id/cover"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="#FFFFFF"
                android:hint="Dia/Mes/Año"
                android:id="@+id/date"
                android:textColorHint="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/group_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:inputType="datetime"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@+id/date"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="#FFFFFF"
                android:layout_gravity="center_horizontal"
            />

            <Spinner
                android:id="@+id/recordLabel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@+id/genre"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="#FFFFFF"
                android:layout_gravity="center_horizontal"
            />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@+id/recording"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="#FFFFFF"
                android:hint="Describe tu album"
                android:id="@+id/description"
                android:textColorHint="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/group_description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:inputType="textMultiLine"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/create_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintTop_toBottomOf="@+id/description"
                android:text="Crear"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:background="@color/app"/>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>