<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
>
  <item
      android:orderInCategory="100"
    android:title="@string/action_settings"
    app:showAsAction="never"
  />
  <item
      android:id="@+id/action_new_entity"
      android:orderInCategory="200"
      android:icon="@drawable/ic_action_new_entity"
      android:title="@string/new_entity"
      app:showAsAction="ifRoom"
  />
</menu>