<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity"
>
  <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.Appmovilmisw4203.AppBarOverlay"
  >
    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@color/app"
      app:popupTheme="@style/Theme.Appmovilmisw4203.PopupOverlay"
    />
  </com.google.android.material.appbar.AppBarLayout>

  <include layout="@layout/content_main" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>