<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view"
>
  <group
    android:checkableBehavior="single"
  >
    <item
      android:id="@+id/nav_home"
      android:title="@string/menu_album"
    />
    <item
      android:id="@+id/nav_gallery"
      android:title="@string/menu_artist"
    />
    <item
      android:id="@+id/nav_slideshow"
      android:title="@string/menu_collection"
    />
  </group>
</menu>