...
            app:layout_constraintStart_toStartOf="@+id/albumImage"
            app:layout_constraintTop_toBottomOf="@+id/description_album" />

      </LinearLayout>

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/albumRecyclerView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="42dp"
          android:background="#FFFFFF"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="@+id/albumImage"
...
