...
          android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/artistImage"
        app:layout_constraintTop_toBottomOf="@+id/description_artist"
      />
    </LinearLayout>
      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/artistRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/collectionImage"
...
