...
        app:layout_constraintStart_toStartOf="@+id/collectionImage"
        app:layout_constraintTop_toBottomOf="@+id/description_collection"
        />
    </LinearLayout>

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collectionRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/collectionImage"
...
